@@ -1,12 +1,12 @@
 [versions]
 classgraph = "4.8.165"
 commons-io = "2.15.1"
-generex = "1.0.2"
 icu4j = "73.2"
 jackson = "2.15.3"
 kotlin = "1.9.21"
 kotlinpoet = "1.15.3"
 ksp = "1.9.21-1.0.16"
+rgxgen = "2.0"
 # buildsrc and plugins
 snakeyaml = "2.2"
 plugin-dokka = "1.9.10"
@@ -20,7 +20,6 @@ kctfork = "0.4.1"
 [libraries]
 commons-io = { module = "commons-io:commons-io", version.ref = "commons-io" }
 classgraph = { module = "io.github.classgraph:classgraph", version.ref = "classgraph" }
-generex = { module = "com.github.mifmif:generex", version.ref = "generex" }
 icu4j = { module = "com.ibm.icu:icu4j", version.ref = "icu4j" }
 jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jackson" }
 jackson-module-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jackson" }
@@ -31,6 +30,7 @@ kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect" }
 kotlinpoet = { module = "com.squareup:kotlinpoet", version.ref = "kotlinpoet" }
 kotlinpoet-ksp = { module = "com.squareup:kotlinpoet-ksp", version.ref = "kotlinpoet" }
 ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
+rgxgen = { module = "com.github.curious-odd-man:rgxgen", version.ref = "rgxgen" }
 
 # Plugins and dependencies for use in buildSrc/build.gradle.kts
 # Plugins are the *Maven coodinates* of Gradle plugins.
